--- a/frontend/src/app/shopping/productList.html
+++ b/frontend/src/app/shopping/productList.html
@@ -2,7 +2,7 @@
     <div ng-repeat="(index, product) in products track by $index" class="product" id="product">
         <div class="row no-gutters max-height">
             <div class="col-lg-4">
-                <img ng-src="http://localhost:8000/storage{{product.img}}">
+                <img ng-src="http://localhost:8000{{product.img}}">
             </div>
             <div class="col-lg-8">
                 <p class="p-name">{{product.name}}</p>
