--- a/frontend/src/styles/all.css
+++ b/frontend/src/styles/all.css
@@ -351,7 +351,8 @@ input[disabled] {
 /*Shopping cart*/
 #shoppingCart
 {
-	height:100vh;
+    height:100vh;
+    margin: 0 -15px;
 }
 
 .cart-search-box
