--- a/frontend/src/app/shopping/shoppingCart.html
+++ b/frontend/src/app/shopping/shoppingCart.html
@@ -56,7 +56,7 @@
                         <div class="col-6 text-left detail-box">
                             <p class="a-name">{{ $parent.$ctrl.data.name }}</p >
                             <p class="a-price">RM&nbsp;{{ $parent.$ctrl.data.price| number: 2}}</p>
-                            <p class="a-qty">{{ $parent$ctrl.data.qty}}&nbsp;<i>in stock</i></p>
+                            <p class="a-qty">{{ $parent.$ctrl.data.qty}}&nbsp;<i>in stock</i></p>
                         </div>
                         <div class="col-12 img-detail-box">
                             <p>Product Detail</p>
