--- a/frontend/src/app/shopping/shoppingCart.html
+++ b/frontend/src/app/shopping/shoppingCart.html
@@ -6,7 +6,7 @@
         <div ng-repeat="(index, product) in $ctrl.products track by $index" class="product" id="product">
             <div class="row no-gutters max-height">
                 <div class="col-lg-4">
-                    <img ng-src="http://localhost:8000{{product.img}}">
+                    <img ng-src="{{$ctrl.url + product.img}}">
                 </div>
                 <div class="col-lg-8">
                     <p class="p-name">{{product.name}}</p>
@@ -28,7 +28,7 @@
         <div class="cart-list">
             <div ng-repeat="(index, cart) in $ctrl.cartList track by $index" class="cart" id="cart" >
                 <p class="c-name">{{cart.name}}</p>
-                <img ng-src="http://localhost:8000{{cart.img}}" style="width:150px;height:100px">
+                <img ng-src="{{$ctrl.url + product.img}}" style="width:150px;height:100px">
                 <p>RM&nbsp;{{ cart.price | number: 2}}</p>
                 <p>Qty: {{cart.qty}}</p>
                 <button ng-click="$ctrl.removeFromCart(index)" class="btn-red"><i class="fas fa-minus"></i></button>
@@ -51,7 +51,7 @@
                 <div class="col-12 col-lg-8 offset-lg-2 text-center">
                     <div class="row no-gutters about-product-detail">
                         <div class="col-6 text-center img-box">
-                            <img  class="img" ng-src="http://localhost:8000{{$parent.$ctrl.data.img}}" >
+                            <img  class="img" ng-src="{{$ctrl.url + $parent.$ctrl.data.img}}" >
                         </div>
                         <div class="col-6 text-left detail-box">
                             <p class="a-name">{{ $parent.$ctrl.data.name }}</p >
@@ -60,7 +60,7 @@
                         </div>
                         <div class="col-12 img-detail-box">
                             <p>Product Detail</p>
-                            <img class="imgDetail" ng-src="http://localhost:8000{{ $parent.$ctrl.data.imgDetail}}">
+                            <img class="imgDetail" ng-src="{{$ctrl.url + $parent.$ctrl.data.imgDetail}}">
                         </div>
                     </div>
                 </div>
