--- a/frontend/src/app/components/customOverlay/customOverlay.html
+++ b/frontend/src/app/components/customOverlay/customOverlay.html
@@ -1,3 +1,3 @@
-<div class="custom-overlay" ng-class="{active: $ctrl.isShow}">
+<div ng-class="[$ctrl.overlayType, {active: $ctrl.isShow}]">
     <ng-transclude></ng-transclude>
 </div>
