--- a/frontend/src/app/product/productForm.html
+++ b/frontend/src/app/product/productForm.html
@@ -3,7 +3,7 @@
     <div class="row">
 
         <div class="col-12 col-lg-1">
-            <button type="button" ng-click="$ctrl.closeOverlay()" class="overlay-close-btn"><i class="fas fa-angle-right"></i></button>
+            <button type="button" ng-click="$ctrl.onClose()" class="overlay-close-btn"><i class="fas fa-angle-right"></i></button>
         </div>
 
         <div class="col-12 col-lg-6">
