--- a/frontend/src/app/shopping/shoppingCart.html
+++ b/frontend/src/app/shopping/shoppingCart.html
@@ -42,30 +42,8 @@
         </div>
     </div>
 
-    <custom-overlay is-show="$ctrl.isShowAbout" data="$ctrl.product" overlay-type="'hori-overlay'">
-        <div id="about-product">
-            <div class="row no-gutters">
-                <div class="col-12">
-                    <button class="overlay-close-btn2" type="button" ng-click="$parent.$ctrl.closeOverlay()"><i class="fas fa-angle-down"></i></button>
-                </div>
-                <div class="col-12 col-lg-8 offset-lg-2 text-center">
-                    <div class="row no-gutters about-product-detail">
-                        <div class="col-6 text-center img-box">
-                            <img  class="img" ng-src="{{$ctrl.url + $parent.$ctrl.data.img}}" >
-                        </div>
-                        <div class="col-6 text-left detail-box">
-                            <p class="a-name">{{$parent.$ctrl.data.name }}</p >
-                            <p class="a-price">RM&nbsp;{{$parent.$ctrl.data.price| number: 2}}</p>
-                            <p class="a-qty">{{$parent.$ctrl.data.qty}}&nbsp;<i>in stock</i></p>
-                        </div>
-                        <div class="col-12 img-detail-box">
-                            <p>Product Detail</p>
-                            <img class="imgDetail" ng-src="{{$ctrl.url + $parent.$ctrl.data.imgDetail}}">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <custom-overlay is-show="$ctrl.isShowAbout" overlay-type="'hori-overlay'">
+        <about-product data="$ctrl.product" on-close="$parent.$ctrl.closeOverlay()"></about-product>
     </custom-overlay>
 </div>
 
