--- a/frontend/src/app/product/productManager.html
+++ b/frontend/src/app/product/productManager.html
@@ -4,8 +4,8 @@
 
 			<div class="row" style="width:100%;margin:0">
 				<div class="product-control-box order-2 order-lg-1 col-12 ">
-					<button  ng-click="$ctrl.create()" class="btn-green add-btn"><i class="fas fa-plus"></i></button>
-					<button onclick="" class="config-btn mt-lg-3 mt-0"><i class="fas fa-cog pr-lg-1 pr-0"></i><span class="config-txt">Configuration</span></button>
+                    <button ng-click="$ctrl.create()" class="btn-green add-btn"><i class="fas fa-plus"></i></button>
+                    <button ng-click="$ctrl.openBrandType()" class="config-btn mt-lg-3 mt-0"><i class="fas fa-cog pr-lg-1 pr-0"></i><span class="config-txt">Configuration</span></button>
 				</div>
 
 				<div class="product-search-box order-1 order-lg-2 col-12 no-gutters">
@@ -36,5 +36,9 @@
 
     <custom-overlay is-show="$ctrl.isShow.product" overlay-type="'vert-overlay'" >
         <product-form data="$ctrl.data" on-close="$parent.$ctrl.closeOverlay()"></product-form>
+    </custom-overlay>
+
+    <custom-overlay is-show="$ctrl.isShow.brandType" overlay-type="'vert-overlay'" >
+        <brand-type data="$ctrl.data" on-close="$parent.$ctrl.closeOverlay()"></brand-type>
     </custom-overlay>
 </div>
